<!--
  ~  Copyright 2022 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">质感笔记</string>
    <string name="zh_search">查找</string>
    <string name="zh_delete">删除</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="zh_welcome">欢迎</string>
    <string name="zh_setting">设置</string>
    <string name="zh_add_note">添加笔记</string>
    <string name="zh_note_info_hint">点击此处输入文字</string>
    <string name="zh_save">保存</string>
    <string name="zh_reset">重置</string>
    <string name="zh_share">分享</string>
    <string name="zh_about">关于</string>
    <string name="zh_other">其他</string>
    <string name="zh_look_github">在github上查看</string>
    <string name="zh_look_license">查看许可</string>
    <string name="zh_app_version">应用版本 %s</string>
    <string name="zh_author">作者</string>
    <string name="zh_author_name">Vast Gui</string>
    <string name="zh_follow_github">在 Github 上关注</string>
    <string name="zh_follow_csdn">查看他的 CSDN 博客</string>
    <string name="zh_follow_twitter">在 Twitter 上跟随</string>
</resources>
