<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>