<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2022 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.EditActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:menu="@menu/menu_edit"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.Toolbar.Surface"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/zh_note_info_hint"
        android:textColor="#070507"
        android:textSize="20sp"
        android:padding="5dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:drawableStart="@drawable/ic_time"
        android:textSize="15sp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?colorSurface"
        android:padding="10dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/saveNote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/zh_save"
            android:drawableTop="@drawable/ic_save"
            android:gravity="center"
            android:textSize="15sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/shareNote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/zh_share"
            android:drawableTop="@drawable/ic_share"
            android:gravity="center"
            android:textSize="15sp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resetNote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/zh_reset"
            android:drawableTop="@drawable/ic_reset"
            android:gravity="center"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>